# stx

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASING.md  build.gradle.kts  go.mod  pyproject.toml  settings.gradle.kts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: todo.md
.claude/plans/: dreamy-purring-russell-agent-a5664b37e6f67f57a.md
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  context.py  render.py
cmd/stx/: main.go
daemon/: build.gradle.kts  settings.gradle.kts
daemon/docs/: stx-v3-design.md  stx-v3-implementation-brief.md  stx-v3-next.md  stx-v3-schema.sql
daemon/scripts/: smoke.sh
docs/: autostart.md  db-enforced-semantics.md  erd.md  service-enforced-semantics.md  stx-cli.md  stx-v3-decisions.md  stx-v3-design.md  stx-v3-implementation-brief.md  stx-v3-next.md  stx-v3-schema.sql  v3-architecture.md  why-sqlite.md
examples/: graph.toml
gradle/: libs.versions.toml
internal/api/: types.go
internal/cli/: admin.go  archive.go  cas.go  cas_test.go  complete.go  complete_test.go  completion.go  completion_test.go  edges.go  editor.go  editor_test.go  exit.go  exit_test.go  graph.go  graph_test.go  graphstyle.go  graphstyle_test.go  meta.go  meta_test.go  orient.go  pick.go  pick_drift_test.go  pick_test.go  quiet_test.go  render.go  render_test.go  resolve.go  resolve_test.go  root.go  root_test.go  show.go  stdio.go  stdio_test.go  tasks.go  wizard.go
internal/client/: client.go  client_test.go  reads.go  writes.go
internal/version/: version.go
macosx/: com.codingzen.sticky-notes-mcp.plist  install.sh  sticky-notes-mcp-launcher.sh  uninstall.sh
packaging/systemd/: stx.service
scripts/: README.md  dev_sim.py  generate_erd.py  graph_bigdemo.sh  graph_demo.sh  harness.py  parity.sh  smoke-go.sh  smoke-hooks.sh  smoke-test.sh  uninstall-mcp.sh  wipe_db.py
scripts/clisim/: __init__.py  cli.py  run.py
scripts/clisim/scenarios/: __init__.py  archive.py  coherence.py  edges.py  frontier.py  lifecycle.py
skills/hooks/: SKILL.md
skills/next/: SKILL.md
skills/sticky-notes/: SKILL.md
skills/sticky-notes/references/: cli-reference.md  json-schema.md
skills/stx/: SKILL.md
skills/stx/next/: SKILL.md
src/sticky_notes/: __main__.py  active_board.py  active_workspace.py  cli.py  connection.py  export.py  formatting.py  mappers.py  models.py  presenters.py  repository.py  schema.sql  service.py  service_models.py
src/stx/: __main__.py  active_workspace.py  cli.py  connection.py  export.py  formatting.py  graph.py  hook_events.schema.json  hooks.py  mappers.py  models.py  presenters.py  repository.py  schema.sql  service.py  service_models.py
stxc/: __init__.py  client.py  models.py
tests/: conftest.py  helpers.py  requirements.txt  seed.py  test_archive_modal.py  test_cli.py  test_client.py  test_connection.py  test_context.py  test_create_modals.py  test_edit_modals.py  test_export.py  test_graph.py  test_hooks.py  test_hooks_integration.py  test_mappers.py  test_markdown_editor.py  test_metadata_modal.py  test_models.py  test_presenters.py  test_render.py  test_repository.py  test_service.py  test_task_edit_modal.py  test_task_metadata_modal.py  test_tui.py  test_tui_config.py  test_tui_config_modal.py  test_tui_edges.py  test_tui_entity_edit.py  test_tui_explain.py  test_tui_metadata.py  test_tui_model.py  test_tui_registry.py  test_tui_segment.py
tui/: __main__.py  app.py  config.py  stx.tcss
tui/screens/: __init__.py  base_edit.py  config.py  dialogs.py  edges.py  metadata.py  registry.py  task_form.py
tui/widgets/: __init__.py  kanban_board.py  task_card.py  workspace_tree.py
(+144 files in other folders)
