[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sticky-notes"
version = "0.7.0"
description = "A local todo/kanban app with CLI and TUI interfaces"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "pytest-asyncio>=1.0", "pytest-xdist>=3.0"]

[project.scripts]
todo = "sticky_notes.__main__:main"
todo-tui = "sticky_notes.tui:main"

[tool.pytest.ini_options]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto"

[tool.coverage.run]
source = ["sticky_notes"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.hatch.build.targets.wheel]
packages = ["src/sticky_notes"]
