[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sticky-notes"
version = "0.9.0"
description = "A local todo/kanban app with CLI and TUI interfaces"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "pytest-asyncio>=1.0", "pytest-xdist>=3.0", "ruff>=0.9", "mypy>=1.0"]

[project.scripts]
todo = "sticky_notes.__main__:main"
todo-tui = "sticky_notes.tui:main"

[tool.pytest.ini_options]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["sticky_notes"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sticky_notes"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]   # re-export modules
"tests/*" = ["F841"]          # unused vars in tests are often intentional fixtures

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = ["no-any-return"]  # SQLite Row fields are inherently Any

[tool.hatch.build.targets.wheel]
packages = ["src/sticky_notes"]
