[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stx"
version = "0.10.0"
description = "Structured context management with CLI-first agent integration and a human-friendly TUI"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "pytest-asyncio>=1.0", "pytest-xdist>=3.0", "ruff>=0.9", "mypy>=1.0"]

[project.scripts]
stx = "stx.__main__:main"
stx-tui = "stx.tui:main"

[tool.pytest.ini_options]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["stx"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["stx"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]   # re-export modules
"tests/*" = ["F841"]          # unused vars in tests are often intentional fixtures

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = ["no-any-return"]  # SQLite Row fields are inherently Any

[tool.hatch.build.targets.wheel]
packages = ["src/stx"]
